--- a/smart_control/notebooks/SAC_Demo.ipynb
+++ b/smart_control/notebooks/SAC_Demo.ipynb
@@ -105,6 +105,8 @@
         "from smart_buildings.smart_control.utils import observation_normalizer\n",
         "from smart_buildings.smart_control.utils import reader_lib\n",
         "from smart_buildings.smart_control.utils import writer_lib\n",
+        "from smart_buildings.smart_control.utils import histogram_reducer\n",
+        "\n",
         "import tensorflow as tf\n",
         "from tf_agents.agents.sac import sac_agent\n",
         "from tf_agents.agents.sac import tanh_normal_projection_network\n",
@@ -159,8 +161,8 @@
         "\n",
         "\n",
         "data_path = \"third_party/py/smart_buildings/smart_control/configs/resources/sb1/\" #@param {type:\"string\"}\n",
-        "metrics_path = \"/usr/local/google/home/metrics\" #@param {type:\"string\"}\n",
-        "output_data_path = '/usr/local/google/home/smart_buildings/smart_control/sb_colab_demo' #@param {type:\"string\"}\n",
+        "metrics_path = \"/usr/local/google/home/user/Desktop/metrics\" #@param {type:\"string\"}\n",
+        "output_data_path = '/usr/local/google/home/user/Desktop/smart_buildings/smart_control/sb_colab_demo' #@param {type:\"string\"}\n",
         "root_dir = \"/usr/local/google/root\" #@param {type:\"string\"}\n",
         "\n",
         "\n",
@@ -168,7 +170,7 @@
         "def get_histogram_reducer():\n",
         "\n",
         "\n",
-        "    reader = controller_reader.ProtoReader(local_data_path)\n",
+        "    reader = controller_reader.ProtoReader(data_path)\n",
         "\n",
         "    hr = histogram_reducer.HistogramReducer(\n",
         "        histogram_parameters_tuples=histogram_parameters_tuples,\n",
@@ -184,7 +186,7 @@
         "\n",
         "\n",
         "\n",
-        "def remap_filepath(filepath) -\u003e str:\n",
+        "def remap_filepath(filepath) -> str:\n",
         "    return filepath\n"
       ]
     },
@@ -237,7 +239,7 @@
         "  )\n",
         "\n",
         "\n",
-        "def get_energy_timeseries(reward_infos, time_zone: str) -\u003e pd.DataFrame:\n",
+        "def get_energy_timeseries(reward_infos, time_zone: str) -> pd.DataFrame:\n",
         "  \"\"\"Returns a timeseries of energy rates.\"\"\"\n",
         "\n",
         "  start_times = []\n",
@@ -318,7 +320,7 @@
         "def get_outside_air_temperature_timeseries(\n",
         "    observation_responses,\n",
         "    time_zone: str,\n",
-        ") -\u003e pd.Series:\n",
+        ") -> pd.Series:\n",
         "  \"\"\"Returns a timeseries of outside air temperature.\"\"\"\n",
         "  temps = []\n",
         "  for i in range(len(observation_responses)):\n",
@@ -344,7 +346,7 @@
         "    reward_infos,\n",
         "    reward_responses,\n",
         "    time_zone: str,\n",
-        ") -\u003e pd.DataFrame:\n",
+        ") -> pd.DataFrame:\n",
         "  \"\"\"Returns a timeseries of reward values.\"\"\"\n",
         "  cols = [\n",
         "      'agent_reward_value',\n",
@@ -486,7 +488,7 @@
         "  def _to_kwh(\n",
         "      energy_rate: float,\n",
         "      step_interval: pd.Timedelta = pd.Timedelta(5, unit='minute'),\n",
-        "  ) -\u003e float:\n",
+        "  ) -> float:\n",
         "    kw_power = energy_rate / 1000.0\n",
         "    hwh_power = kw_power * step_interval / pd.Timedelta(1, unit='hour')\n",
         "    return hwh_power.cumsum()\n",
@@ -706,7 +708,7 @@
         "\n",
         "  single_action_timeseries = action_timeseries[\n",
         "      (action_timeseries['device_id'] == action_tuple[0])\n",
-        "      \u0026 (action_timeseries['setpoint_name'] == action_tuple[1])\n",
+        "      & (action_timeseries['setpoint_name'] == action_tuple[1])\n",
         "  ]\n",
         "  single_action_timeseries = single_action_timeseries.sort_values(\n",
         "      by='timestamp'\n",
@@ -944,7 +946,7 @@
         "\n",
         "def get_latest_episode_reader(\n",
         "    metrics_path: str,\n",
-        ") -\u003e controller_reader.ProtoReader:\n",
+        ") -> controller_reader.ProtoReader:\n",
         "\n",
         "  episode_infos = controller_reader.get_episode_data(metrics_path).sort_index()\n",
         "  selected_episode = episode_infos.index[-1]\n",
@@ -1137,7 +1139,7 @@
         "          )\n",
         "      )\n",
         "\n",
-        "      if (step_id \u003e 0) and (step_id % render_interval_steps == 0):\n",
+        "      if (step_id > 0) and (step_id % render_interval_steps == 0):\n",
         "        if environment._metrics_path:\n",
         "          outputarea.ClearOutput(wait=True)\n",
         "          reader = get_latest_episode_reader(environment._metrics_path)\n",
@@ -1196,14 +1198,14 @@
         "ActionSequence = list[tuple[DeviceType, SetpointName]]\n",
         "\n",
         "\n",
-        "def to_rad(sin_theta: float, cos_theta: float) -\u003e float:\n",
+        "def to_rad(sin_theta: float, cos_theta: float) -> float:\n",
         "  \"\"\"Converts a sin and cos theta to radians to extract the time.\"\"\"\n",
         "\n",
-        "  if sin_theta \u003e= 0 and cos_theta \u003e= 0:\n",
+        "  if sin_theta >= 0 and cos_theta >= 0:\n",
         "    return np.arccos(cos_theta)\n",
-        "  elif sin_theta \u003e= 0 and cos_theta \u003c 0:\n",
+        "  elif sin_theta >= 0 and cos_theta < 0:\n",
         "    return np.pi - np.arcsin(sin_theta)\n",
-        "  elif sin_theta \u003c 0 and cos_theta \u003c 0:\n",
+        "  elif sin_theta < 0 and cos_theta < 0:\n",
         "    return np.pi - np.arcsin(sin_theta)\n",
         "  else:\n",
         "    return 2 * np.pi - np.arccos(cos_theta)\n",
@@ -1211,13 +1213,13 @@
         "  return np.arccos(cos_theta) + rad_offset\n",
         "\n",
         "\n",
-        "def to_dow(sin_theta: float, cos_theta: float) -\u003e float:\n",
+        "def to_dow(sin_theta: float, cos_theta: float) -> float:\n",
         "  \"\"\"Converts a sin and cos theta to days to extract day of week.\"\"\"\n",
         "  theta = to_rad(sin_theta, cos_theta)\n",
         "  return np.floor(7 * theta / 2 / np.pi)\n",
         "\n",
         "\n",
-        "def to_hod(sin_theta: float, cos_theta: float) -\u003e float:\n",
+        "def to_hod(sin_theta: float, cos_theta: float) -> float:\n",
         "  \"\"\"Converts a sin and cos theta to hours to extract hour of day.\"\"\"\n",
         "  theta = to_rad(sin_theta, cos_theta)\n",
         "  return np.floor(24 * theta / 2 / np.pi)\n",
@@ -1228,7 +1230,7 @@
         "    device: DeviceType,\n",
         "    setpoint_name: SetpointName,\n",
         "    timestamp: pd.Timedelta,\n",
-        ") -\u003e SetpointValue:\n",
+        ") -> SetpointValue:\n",
         "  \"\"\"Finds the action for a schedule event for a time and schedule.\"\"\"\n",
         "\n",
         "  # Get all the schedule events for the device and the setpoint, and turn it\n",
@@ -1247,7 +1249,7 @@
         "  # Get the indexes of the schedule events that fall before the timestamp.\n",
         "\n",
         "  device_schedule_indexes = device_schedule.index[\n",
-        "      device_schedule.index \u003c= timestamp\n",
+        "      device_schedule.index <= timestamp\n",
         "  ]\n",
         "\n",
         "  # If are no events preceedding the time, then choose the last\n",
@@ -1316,7 +1318,7 @@
         "\n",
         "  def _normalize_action_map(\n",
         "      self, action_map: dict[tuple[DeviceType, SetpointName], SetpointValue]\n",
-        "  ) -\u003e dict[tuple[DeviceType, SetpointName], SetpointValue]:\n",
+        "  ) -> dict[tuple[DeviceType, SetpointName], SetpointValue]:\n",
         "\n",
         "    normalized_action_map = {}\n",
         "\n",
@@ -1331,7 +1333,7 @@
         "\n",
         "  def _get_action(\n",
         "      self, time_step\n",
-        "  ) -\u003e dict[tuple[DeviceType, SetpointName], SetpointValue]:\n",
+        "  ) -> dict[tuple[DeviceType, SetpointName], SetpointValue]:\n",
         "\n",
         "    observation = time_step.observation\n",
         "    action_spec = cast(tensor_spec.BoundedTensorSpec, self.action_spec)\n",
@@ -1347,7 +1349,7 @@
         "        pd.Timedelta(hod, unit='hour') + self.local_start_time.utcoffset()\n",
         "    )\n",
         "\n",
-        "    if dow \u003c 5:  # weekday\n",
+        "    if dow < 5:  # weekday\n",
         "\n",
         "      action_map = {\n",
         "          (tup[0], tup[1]): find_schedule_action(\n",
@@ -1907,7 +1909,7 @@
         "      )\n",
         "      self._environment._end_timestamp\n",
         "\n",
-        "  def __call__(self, trajectory: trajectory_lib.Trajectory) -\u003e None:\n",
+        "  def __call__(self, trajectory: trajectory_lib.Trajectory) -> None:\n",
         "\n",
         "    reward = trajectory.reward\n",
         "    self._cumulative_reward += reward\n",
@@ -1947,7 +1949,7 @@
         "      )\n",
         "      self._environment._end_timestamp\n",
         "\n",
-        "  def __call__(self, trajectory: trajectory_lib.Trajectory) -\u003e None:\n",
+        "  def __call__(self, trajectory: trajectory_lib.Trajectory) -> None:\n",
         "\n",
         "    reward = trajectory.reward\n",
         "    self._cumulative_reward += reward\n",
@@ -2333,8 +2335,7 @@
           "file_id": "1a2nzc-VcaGRTpsEFj3FgqRZY0Lk1dgrW",
           "timestamp": 1705074752110
         }
-      ],
-      "toc_visible": true
+      ]
     },
     "kernelspec": {
       "display_name": "Python 3",
